# PhotoSorter

./: .coverage  .gitignore  README.md  pyproject.toml
PhotoSorterApp/: Package.swift
PhotoSorterApp/.build/: build.db  debug.yaml  plugin-tools.yaml
PhotoSorterApp/.build/arm64-apple-macosx/debug/: PhotoSorterApp  PhotoSorterAppGUITests  (+1 more)
PhotoSorterApp/Sources/PhotoSorterApp/: ContentView.swift  PhotoSorterApp.swift
PhotoSorterApp/Sources/PhotoSorterAppGUITests/: main.swift
apps/macos/: Package.swift
apps/macos/Resources/: PhotoSorter.icns
contracts/: pipeline_message.schema.json  pipeline_parameters.schema.json
engine/photosorter_bridge/photosorter_bridge/: __init__.py  cli_json.py  pipeline_runner.py
engine/photosorter_core/photosorter/: cache_paths.py  clustering.py  config.py  embeddings.py  main.py  ordering.py  output.py  pipeline.py  similarity.py  utils.py
photosorter/: __init__.py  __main__.py  cli_json.py  clustering.py  config.py  embeddings.py  gui.py  main.py  ordering.py  output.py
photosorter/app/: pipeline_runner.py
scripts/: generate_app_icon.py  generate_icon_candidates.py  package_macos_app.sh
tests/: test_app_views.py  test_cli_json.py  test_clustering.py  test_embeddings.py  test_entrypoints.py  test_main.py  test_ordering.py  test_output.py  test_pipeline_runner.py  test_similarity.py
tests/python/: test_app_views.py  test_cli_json.py  test_embeddings.py  test_entrypoints.py  test_main.py  test_ordering.py  test_output.py  test_pipeline.py  test_pipeline_runner.py  test_similarity.py  test_utils.py
(+488 files in other folders)
